# rust-decimal-postgres-deserialization-issue

./: Cargo.toml  README.md  docker-compose.yml
dataset/: init.sql
src/: main.rs
