[package]
name = "rust_decimal_postgres_deserialization_issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
rust_decimal = { version = "1.34.2", features = ["db-postgres"]}